# LimeSuite

./: README.md
SoapyLMS7/: Settings.cpp
src/: CMakeLists.txt
src/API/: FairwavesXTRX.cpp  FairwavesXTRX.h  lms7_device.cpp  lms7_device.h
src/ConnectionRegistry/: BuiltinConnections.in.cpp
src/ConnectionXTRX/: CMakeLists.txt  ConnectionXTRX.cpp  ConnectionXTRX.h  ConnectionXTRXEntry.cpp
src/protocols/: LMSBoards.h
